manager/media/style/RevoStyle/style.css
/* ... */
a.hometblink:hover {
    text-decoration: underline;
    color: Gray;
}

#preLoader {
    position: absolute;
    z-index: 50000;
    width: 100%;
    height: 100%;
    text-align: center;
    vertical-align: middle;
    background-color: rgba(255, 255, 255, .3);
}

.preLoaderText {
    background-color: #fff;
    border-radius: 10px;
    opacity: .7;
    width: 300px;
    height: 150px;
    margin: 70px auto;
    padding: 50px;
    border: 1px solid #999;
}

/* -------------------------[ contextmenu in editing modules ]--- */
.contextMenu {
    background: #fff;
    margin: 0;
    padding: 0;
    border: 1px solid #039;
    border-color: #eaeaea #909090 #707070 #eaeaea;
    position: absolute;
    z-index: 10000;
}

.cntxMnuItem {
    background-image: url(images/misc/_tx_.gif);
    cursor: pointer;
    color: var(--color-text-primary);
    padding: 3px 16px 3px 2px;
}

.rtl .cntxMnuItem,
.rtl .cntxMnuItemDisabled {
    padding: 3px 2px 3px 16px;
}

.cntxMnuItemDisabled {
    cursor: default;
    padding: 3px 16px 3px 2px;
    color: #111;
}

.cntxMnuItemOver {
    cursor: pointer;
    color: var(--color-text-primary);
    background: #e3e3e3;
    padding: 2px 15px 2px 1px;
    border: 1px solid #c0c0c0;
}

.rtl .cntxMnuItemOver {
    padding: 2px 1px 2px 15px;
}

.cntxMnuItem img, .cntxMnuItemOver img, .cntxMnuItemDisabled img {
    margin: 0 8px 0 0;
}

.rtl .cntxMnuItem img,
.rtl .cntxMnuItemOver img,
.rtl .cntxMnuItemDisabled img {
    margin: 0 0 0 8px;
}

.cntxMnuItem img, .cntxMnuItemDisabled img {
    opacity: .3;
}

.cntxMnuSeparator {
    font-size: 0;
    height: 1px;
    background-color: silver;
    overflow: hidden;
    margin: 3px 1px 3px 28px;
}

.rtl .cntxMnuSeparator {
    margin: 3px 28px 3px 1px;
}

/* -------------------------[ Top Navbar of snap in top menu bar layout ]--- */
#topMenu {
    background: url("images/misc/headers.jpg") repeat scroll 0 0 #23393C;
}

#Navcontainer {
    --topnav-item-height: 25px;
    --topnav-gap: 10px;
    --subnav-height: 26px;
    --subnav-horizontal-padding: 10px;
    --topnav-link-color: #A4B8B6;
    --topnav-link-hover-color: #fff;
    --topnav-link-active-bg: #616161;
    --topnav-link-active-border: #616161;
    --topnav-link-active-shadow: 0 1px 0 #999 inset, 1px 1px 2px rgba(0, 0, 0, .9);
    color: #fff;
    padding: 6px var(--subnav-horizontal-padding) var(--subnav-height);
    position: relative;
}

#nav {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    gap: var(--topnav-gap);
    margin: 0;
    padding: 0;
    list-style: none;
}

.rtl #nav {
    flex-direction: row-reverse;
}

#nav > li {
    list-style: none;
}

#nav > li > a {
    border-radius: 5px 5px 0 0;
    color: var(--topnav-link-color);
    display: block;
    line-height: var(--topnav-item-height);
    padding: 0 15px;
    text-decoration: none;
    white-space: nowrap;
    transition: color .15s ease, background-color .15s ease, box-shadow .15s ease;
}

#nav > li > a:hover,
#nav > li > a:active,
#nav > li > a:focus-visible {
    color: var(--topnav-link-hover-color);
}

#nav > li.active > a {
    background: var(--topnav-link-active-bg);
    border-bottom: 1px solid var(--topnav-link-active-border);
    box-shadow: var(--topnav-link-active-shadow);
    color: var(--topnav-link-hover-color);
    position: relative;
    text-shadow: 0 -1px 0 #333;
    z-index: 2;
}

#nav > li > ul.subnav {
    display: none;
    position: absolute;
    left: 0;
    right: 0;
    top: calc(var(--topnav-item-height) + 6px);
    margin: 0;
    list-style: none;
    padding: 0 var(--subnav-horizontal-padding);
    min-height: var(--subnav-height);
    align-items: center;
    flex-wrap: wrap;
    gap: var(--topnav-gap);
    border-top: 1px solid #888;
    border-bottom: 1px solid #eee;
    background-color: var(--color-nav-subnav-start);
    background-image: linear-gradient(var(--color-nav-subnav-start), var(--color-nav-subnav-end));
    z-index: 1;
}

.rtl #nav > li > ul.subnav {
    flex-direction: row-reverse;
}

#nav > li.active > ul.subnav {
    display: flex;
}

#nav > li > ul.subnav > li {
    margin: 0;
}

#nav > li > ul.subnav a {
    color: #fff;
    cursor: pointer;
    display: block;
    font-weight: normal;
    line-height: var(--subnav-height);
    padding: 0 18px;
    text-decoration: none;
}

#nav > li > ul.subnav a:hover,
#nav > li > ul.subnav a:focus-visible {
    text-shadow: 0 0 2px #FFF;
}

#nav > li > ul.subnav a:active {
    color: #ccc;
}

/* -------------------------[ Contextual Menu used in the Tree Menu ]--- */
#mx_contextmenu {
    position: absolute;
    height: auto;
    visibility: hidden;
    z-index: 10000;
    width: 165px;
    background-color: var(--color-surface);
    margin: 0;
    padding-bottom: 10px;
    border: 1px solid #ededed;
    border-right-color: #dcdcdc;
    border-bottom-color: #dcdcdc;
    overflow: hidden;
    line-height: 11px;
    box-shadow: 2px 2px 15px #eaeaea;
}

#mx_contextmenu .menuLink {
    cursor: pointer;
    color: #222;
    padding: 3px 5px 3px 4px;
}

#mx_contextmenu .menuLink:hover {
    background: #DDE4EB;
    border: 1px solid #fdfdfd;
    border-bottom-color: #dcdcdc;
    color: var(--color-text-primary);
}

#mx_contextmenu .menuLink:hover,
#mx_contextmenu .menuLinkDisabled {
    cursor: pointer;
    padding: 2px 4px 2px 3px;
}

#mx_contextmenu .menuLinkDisabled {
    cursor: default;
    color: #787878;
}

#mx_contextmenu .menuLink img,
#mx_contextmenu .menuLink:hover img,
#mx_contextmenu .menuLinkDisabled img {
    margin-right: 5px;
}

#mx_contextmenu .menuLink img,
#mx_contextmenu .menuLinkDisabled img {
    opacity: .3;
}

#mx_contextmenu .menuLink:hover img {
    opacity: 1;
}
/* ... */

